--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Tailwind CDN -->
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Portfolio: Ananya Rajesh</title>
+    <title>Personal Website - Ananya Rajesh</title>
 </head>
 
 <body>
@@ -24,26 +24,23 @@
             <a href="#about_info"class="mr-5 hover:text-gray-900">About</a>
             <a href="#contact_info"class="mr-5 hover:text-gray-900">Contact</a>
           </nav>
-          
         </div>
       </header>
 
+
 <!-- About Page from Hero:Tailwind -->
 
-        <section class="text-gray-600 body-font">
-            <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
-              <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://images.unsplash.com/photo-1520970519539-8fa53b242458?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80">
-              <div class="text-center lg:w-2/3 w-full">
-                <a id="about_info"></a>
-                <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Get to know me!</h1>
-                <p class="mb-8 leading-relaxed">Hey Everyone, My name is Ananya and I’m currently doing my major in Computer Science and Engineering. I have always had an interest in networks and enjoy reading network related books and blogs. Being a part of online Linux course was something which made me more ambitious about networking and ethical hacking. I look forward to developing more skills to keep myself updated about the trending technologies.</p>
-                <div class="flex justify-center">
-                  <button class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Button</button>
-                  <button class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Button</button>
-                </div>
-              </div>
-            </div>
-          </section>
+  <section class="text-gray-600 body-font">
+    <div class="container mx-auto flex px-5 py-24 items-center justify-center flex-col">
+    <img class="lg:w-2/6 md:w-3/6 w-5/6 mb-10 object-cover object-center rounded" alt="hero" src="https://images.unsplash.com/photo-1520970519539-8fa53b242458?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=580&q=80">
+    <div class="text-center lg:w-2/3 w-full"> 
+      <a id="about_info"></a>
+        <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">Get to know me!</h1>
+        <p class="mb-8 leading-relaxed">Hello, my name is Ananya. I’m a student and Tech Enthusiast. I have a passion for solving fun puzzles. In my free time I enjoy pursuing more creative endeavours like drawing and yoga. I look forward to developing more skills to keep myself updated about the trending technologies. 
+        <br><br> Thanks for stopping by! </p>
+      </div>
+    </div>
+    </section>
 <hr>
 <!-- Contact:Tailwind -->
 <a id="contact_info"></a> <!-- Object created to link this part to another part of the same page -->
@@ -82,8 +79,8 @@
             <span class="inline-flex">
 
             <!-- LinkedIn Svg-->
-            <a href="/"class="ml-3 text-gray-400">
-                <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+            <a href="https://www.linkedin.com/in/ananyar25"class="ml-3 text-gray-400">
+                <svg fill="black" stroke="white" stroke-linecap="round" stroke-linejoin="round" stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
                   <path stroke="none" d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
                   <circle cx="4" cy="4" r="2" stroke="none"></circle>
                 </svg> </a>
@@ -101,7 +98,6 @@
       </div>
     </div>
   </section>
-
 <hr>
 
 </body>
