--- a/index.html
+++ b/index.html
@@ -58,7 +58,6 @@
 
               <form name="contact" method="POST" data-netlify="true">
                 <input type="hidden" name="contact" value="contact">
-
               <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
               <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
             </div>
@@ -67,6 +66,7 @@
             <div class="relative">
               <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
               <input type="email" id="email" name="email" placeholder="sample@gmail.com" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+            </form>
             </div>
           </div>
           <div class="p-2 w-full">
