--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
                 <input type="hidden" name="contact" value="contact">
 
                 <label for="name" class="leading-7 text-sm text-gray-600">Name</label>
-                <input type="text" id="name" name="name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+                <input type="text" id="name" name="name" placeholder="Your Name" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
             </div>
           </div>
           <div class="p-2 w-1/2">
             <div class="relative">
               <label for="email" class="leading-7 text-sm text-gray-600">Email</label>
-              <input type="email" id="email" name="email" placeholder="sample@gmail.com" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
+              <input type="email" id="email" name="email" placeholder="Your Mail ID" class="w-full bg-gray-100 bg-opacity-50 rounded border border-gray-300 focus:border-indigo-500 focus:bg-white focus:ring-2 focus:ring-indigo-200 text-base outline-none text-gray-700 py-1 px-3 leading-8 transition-colors duration-200 ease-in-out">
             
             </div>
           </div>
@@ -83,7 +83,7 @@
         </form>
         
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a href="mailto:ananyarajesh25@email.com"class="text-indigo-500">ananyarajesh25@email.com</a>
+            <a href="mailto:ananyarajesh25@email.com"class="text-indigo-500">ananyarajesh25@gmail.com</a>
             <p class="leading-normal my-5"> Karnataka, India </p>
             <span class="inline-flex">
 
