--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </form>
         
           <div class="p-2 w-full pt-8 mt-8 border-t border-gray-200 text-center">
-            <a href="mailto:ananyarajesh25@email.com"class="text-indigo-500">ananyarajesh25@gmail.com</a>
+            <a href="mailto:ananyarajesh25@gmail.com"class="text-indigo-500">ananyarajesh25@gmail.com</a>
             <p class="leading-normal my-5"> Karnataka, India </p>
             <span class="inline-flex">
 
